--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
+    "next-i18next": "^13.2.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intl": "^6.4.2",
     "tailwindcss": "3.3.2"
   }
 }
